updated idpay api definitions for new barcode handling

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -3285,6 +3285,7 @@ idpay:
         header: Ecco il codice sconto!
         body: "Chiedi all’esercente di poter pagare tramite l’iniziativa {{initiativeName}} e mostra questo codice a barre:"
         expiresIn: "Il codice scade tra"
+        validUpTo: "Vale fino a "
         expired: "Il codice é scaduto."
         saveImageCta: Salva come immagine
       error:
@@ -3389,6 +3390,7 @@ idpay:
               SUSPENDED: "Sospensione"
               READMITTED: "Riattivazione"
               CIE: "Abilitazione carta d’identità elettronica"
+              UNSUBSCRIBED: "Recesso dall’iniziativa"
     discountDetails:
       authorizeButton: Autorizza un pagamento
       bottomSheetOptions:
