chore: added i18n labels

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -3799,3 +3799,8 @@ transaction:
       pspName: Gestore della transazione (PSP)
       dateAndHour: Data e ora
       transactionId: ID transazione
+    operation:
+      amount: Importo
+      creditor: Ente creditore
+      debtor: Debitore
+      iuv: IUV
