fix(IT Wallet): [SIW-483] Presentation with disabled wallet (#5258)
## Short description
This PR fixes an issue which allows a remote presentation flow to start
when the wallet is disabled or in operational state.

## List of changes proposed in this pull request
- Adds a condition which disables the QR code decoder for ITW when the
FF is disabled;
- Adds a check in presentation sagas for the wallet status which must be
valid to start the presentation;
- Adds the error mapping where needed.

## How to test
- Test a PID remote presentation flow when the ITW FF is disabled. The
QR code should be ignored;
- Test a PID remote presentation flow when the ITW is in operational
status. It should show an error screen;
- Test a PID remote presentation flow when the ITW is in valid status.
It should proceeded as before.

Co-authored-by: Mario Perrotta <mario.perrotta@pagopa.it>

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -3410,6 +3410,11 @@ features:
       checksScreen: 
         loading: "We are checking to verify that this organization is verified"
         success: "{{organizationName}} is a verified organization"
+        errors:
+          walletNotValid: 
+            title: IT Wallet is not active
+            subtitle: To present a credential, you need to activate it first.
+            actionLabel: Activate IT Wallet
       dataScreen: 
         title: "Allow the reading of your data"
         subtitle: "Authorizes {{organizationName}} to process your data to provide you with the services you request."
