--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -1339,6 +1339,7 @@ wallet:
           bottomSheetTitle: "Perché non riesco a pagare con questo metodo?"
           bottomSheetDescription: "La funzionalità “Pagamenti in app” potrebbe essere disattivata.\nPrima di riprovare ad effettuare il pagamento, procedi come segue:\n\n1. vai nella sezione “Portafoglio”;\n2. seleziona il metodo di pagamento che vuoi utilizzare;\n3. abilita “Pagamenti in app”."
   firstTransactionSummary:
+    loading: Recuepro delle informazioni in corso
     title: Dati del pagamento
     amount: Importo
     total: Totale pagato
@@ -3284,7 +3285,7 @@ idpay:
       success:
         header: Ecco il codice sconto!
         body: "Chiedi all’esercente di poter pagare tramite l’iniziativa {{initiativeName}} e mostra questo codice a barre:"
-        validUpTo: "Vale fino a " 
+        validUpTo: "Vale fino a "
         expiresIn: "Il codice scade tra"
         expired: "Il codice é scaduto."
         saveImageCta: Salva come immagine
