--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -1801,6 +1801,11 @@ messageDetails:
       thirdPart: " per maggiori informazioni."
     failing:
       details: "Non sono riuscito a scaricare l’allegato. Riprova o apri una segnalazione"
+  banner:
+    content1: "Questo è un"
+    content2: "messaggio dinamico:"
+    content3: "il contenuto potrebbe cambiare nel tempo per darti informazioni aggiornate."
+    action: "Scopri di più"
 messagePDFPreview:
   title: "Anteprima PDF"
   singleBtn: "Salva o condividi"
