feat: [IOPID-689] Email validation at startup (#5264)
## ⚠️ Depends on https://github.com/pagopa/io-app/pull/5206 ⚠️ ##

## Short description
This PR blocks the user if their email is not verified or is already
taken, forcing them to validate or change it. The flow is described in
this
[Figma](https://www.figma.com/file/oLJMcWd0SbRHDtj7WRvu7N/Univocit%C3%A0-indirizzi-email?type=design&node-id=31-12161&mode=design&t=np5Q8HLkqXhrq6ey-4).

## List of changes proposed in this pull request
- The two modal `ValidateEmailModal` and `EmailAlreadyUsedModal` has
been changed to their sibling screen component `ValidateEmailScreen` and
`EmailAlreadyTakenScreen` to use the navigation capabilities.
- A new redux state has been added to `EmailValidationState` to know if
we are landing to `EmailInsertScreen` from the standard flow or because
the user has been block during the startup process.

## How to test
Enable the `new CDU flow` and using the `io-dev-api-server` try to:
- Enter the app as a new user (firstOnboardig: true) and see that you
are blocked until you have validated your email. Even if you reload the
app.
- Change your email in the profile section and see that you are blocked
until you have validated your email, even if you reload the app.
- Try to invalidate the email and set it as "already taken", and restart
the app. You should see that you are blocked until you have changed and
successfully validated the new email, even if you reload the app.

> At app startup if `isEmailValidated=true` the user can continue
without problems, otherwise if `isEmailValidated=false` the user sees
`ValidateEmailScreen` or `EmailAlreadyTakenScreen` based on the value of
`isEmailAlreadyTaken`.

<details open><summary>Details</summary>
<p>

<video
src="https://github.com/pagopa/io-app/assets/16268789/6aa4156e-71e0-4cc1-9071-19fafbe8bbc8"
/>

</p>
</details>

---------

Co-authored-by: Alice Di Rico <83651704+Ladirico@users.noreply.github.com>


--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -749,17 +749,25 @@ authentication:
     listitem3_4: codice di ripristino
     listitem3_5: per confermare l’operazione.
 email:
-  cduModal:
+  cduScreens:
     validateMail:
-      title: Indirizzo email non validato
+      title: Non hai confermato il tuo indirizzo email
       subtitle: Per continuare a utilizzare l’app è necessario validare il tuo indirizzo email
       editButton: Modifica email
-      validateButton: Valida email
-    editMail:
+      validateButton: Conferma email
+      header: 
+        title: Configura IO
+      help:
+        body: Per continuare a utilizzare l’app è necessario validare il tuo indirizzo email.
+    emailAlreadyTaken:
       title: Modifica la tua email
       subtitleStart: Il tuo indirizzo email
       subtitleEnd: risulta già in uso su IO, è necessario inserirne uno diverso per continuare a utilizzare l’app.
       editButton: Modifica email
+      header: 
+        title: Configura IO
+      help:
+        body: Il tuo indirizzo email risulta già in uso su IO, è necessario inserirne uno diverso per continuare a utilizzare l’app.
   read:
     title: Il tuo indirizzo email
     info: Questo è l'indirizzo email che hai associato all'account SPID. Puoi usare in IO un indirizzo email diverso, se preferisci. Per rendere operativo il nuovo indirizzo, dovrai validarlo cliccando sul link che riceverai nella tua casella di posta elettronica.
