change copy and componentize modal

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -675,22 +675,23 @@ authentication:
     headerTitle: What is SPID?
     contentTitle: Don't have SPID?
     subtitle: SPID is safe
-  opt-in:
+  opt_in:
     contextualHelpTitle: Authentication
     contextualHelpContent: Here you can find information on how to authenticate on IO and some security tips.
     news: News
-    title: It's now faster to log into IO
-    identity-check: You'll need to log in with SPID or CIE only once a year, or in case you log out.
-    security-suggests: Safety tips
-    passcode: After logging in with SPID or CIE once, you'll just need your unlock code, face or fingerprint to use the app.
-    notification: Whenever there is a new login with SPID or CIE, we'll send you an e-mail to let you know.
-    button-accept-lv: Yes, log in faster
-    button-decline-lv: No, I want to log in with SPID or CIE every 30 days
-    fingerprint: To log in, simply use your unlock code, face or fingerprint. Do not share these with anyone.
-    io-logout: If you lose your device, to remotely log out of IO visit
-    io-lock-access: If you think your SPID or CIE credentials have been stolen, to block access to IO visit
-    access-new-device: If you log in to IO with a device that belongs to someone else, make sure to log out once you're done.
-    io-site: ioapp.it
+    title: Ora è più facile accedere!
+    identity_check: Non dovrai più autenticarti ogni 30 giorni, ma solo una volta all’anno o se ti disconnetti dall’app.
+    security_suggests: Alcuni consigli di sicurezza
+    passcode: Dopo la prima autenticazione con SPID o CIE, potrai accedere solo con il codice di sblocco o con il biometrico.
+    notification: Riceverai un’email dopo ogni accesso. Potrai così bloccare l’accesso a IO se necessario.
+    button_accept_lv: Continua con l’accesso rapido
+    button_decline_lv: No, voglio autenticarmi ogni 30 giorni
+  security_suggestions: 
+    fingerprint: Per accedere a IO, basta inserire il codice o il riconoscimento biometrico. Non condividerli con nessuno.
+    io_logout: Se perdi il dispositivo, esci dall’app accedendo a IO dal web.
+    io_lock_access: Se pensi che le tue credenziali SPID o CIE siano compromesse, blocca l’accesso all’app entrando su IO dal web.
+    access_new_device: If you log in to IO with a device that belongs to someone else, make sure to log out once you're done.
+    navigate_to_the_site: Vai al sito
   idp_selection:
     headerTitle: Home
     contentTitle: Select your Identity Provider
