--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -1806,6 +1806,9 @@ messageDetails:
     content2: "messaggio dinamico:"
     content3: "il contenuto potrebbe cambiare nel tempo per darti informazioni aggiornate."
     action: "Scopri di più"
+  bottomSheet:
+    title: "Cos'è un messaggio dinamico?"
+    body: "L'Ente mittente potrebbe aggiornare il contenuto di questo messaggio anche dopo l'invio, per assicurare che le informazioni siano sempre accurate e rilevanti.\n\n Questa operazione avviene in casi specifici, come l'aggiornamento di informazioni obsolete o di allegati non più validi.\n\n Se l'Ente deve invece comunicarti nuove informazioni o aggiornamenti importanti, lo farà tramite un nuovo messaggio."
 messagePDFPreview:
   title: "Anteprima PDF"
   singleBtn: "Salva o condividi"
