--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -3292,10 +3292,12 @@ idpay:
       success:
         header: Ecco il codice sconto!
         body: "Chiedi all’esercente di poter pagare tramite l’iniziativa {{initiativeName}} e mostra questo codice a barre:"
-        expiresIn: "Il codice scade tra"
-        validUpTo: "Vale fino a "
-        expired: "Il codice é scaduto."
+        validUpTo: "Vale fino a " 
+        expiresIn: "Il codice scade tra "
         saveImageCta: Salva come immagine
+        expired:
+          header: "Il codice è scaduto"
+          CTA: Usa un nuovo codice
       error:
         generic:
           body: In questo momento non è possibile generare un codice
